[tool.poetry]
name = "ledcube"
version = "0.1.0"
description = ""
authors = ["philippdahm"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
pathlib = "^1.0.1"
webcolors = "^1.13"

rpi_ws281x  = { version = "^5.0.0", optional = true }
adafruit-circuitpython-neopixel = { version = "^6.3.11", optional = true }
adafruit-blinka = { version = "^8.38.0", optional = true }

[tool.poetry.extras]
rpi = ["rpi_ws281x","adafruit-circuitpython-neopixel","adafruit-blinka"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
